add predict function backup

--- a/test.ipynb
+++ b/test.ipynb
@@ -75,6 +75,10 @@
     "    train_cascades, train_times = load_cascades(FLAGS.dataset, mode='train')\n",
     "    val_cascades, val_times = load_cascades(FLAGS.dataset, mode='val')\n",
     "    test_cascades, test_times = load_cascades(FLAGS.dataset, mode='test')\n",
+    "    print('shape:',test_cascades.shape)\n",
+    "    print('cascade:',test_cascades[0])\n",
+    "    print(\"times:\",test_times[0])\n",
+    "\n",
     "\n",
     "    # 对数据进行截断,并且构建seed和剩余片段： Truncating input data based on max_seq_length.\n",
     "    train_examples, train_examples_times = get_data_set(train_cascades, train_times,\n",
@@ -88,7 +92,7 @@
     "                                                      test_min_percent=FLAGS.test_min_percent,\n",
     "                                                      test_max_percent=FLAGS.test_max_percent,\n",
     "                                                      mode='test')\n",
-    "\n",
+    "    \n",
     "    print(\"# nodes in graph\", num_nodes)\n",
     "    print(\"# train cascades\", len(train_cascades))\n",
     "\n",
